--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
         var mediaIndex = 1
         var mediaLibrary = mediaData[mediaIndex.toString()]
+        var audio = new Audio()
 
         function generatePreviews() {
             for (let i = 1; i < 11; i++) {
@@ -133,13 +134,17 @@
         }
 
         function setMedia(key) {
+            audio.pause()
             var i = key - 1
             if (key == 0) {
                 i = 9
             }
             var mediaElement = mediaLibrary[i]
             if (mediaElement.audio != '') {
-
+                audio = new Audio("media/" + mediaElement.audio)
+                audio.loop = true
+                audio.load()
+                audio.play()
             }
             media.backgroundImage = 'url("media/' + mediaElement.file + '?a=' + Math.random() + '")'
         }
@@ -171,23 +176,21 @@
                 }
             }
             else if (event.key == "*") {
-                prevKey = ''
-                currentKey = ''
-                key.innerHTML = '0'
+                reset()
                 state.innerHTML = 'FULLSCREEN'
-                media.backgroundImage = ''
                 if (document.documentElement.requestFullscreen) {
                     document.documentElement.requestFullscreen()
                 } 
             }
             else if (event.key == "/") {
+                reset()
                 state.innerHTML = 'MEDIA SET<br>CHANGED'
-                media.backgroundImage = ''
             }
             else if (event.key == ".") {
                 reset()
                 state.innerHTML = 'STREAM<br>STOPPED'
                 media.backgroundImage = ''
+                audio.pause()
             }
             else {
                 reset()
