--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         body {
             display: flex;
             margin: 0 auto;
+            font-family: sans-serif;
         }
 
         #media {
@@ -17,7 +18,6 @@
         }
 
         #input {
-            font-family: sans-serif;
             min-width: 256px;
             width: 256px;
             height: 256px;
@@ -61,6 +61,20 @@
         #state {
             font-size: 25px;
         }
+
+        #instructions {
+            min-width: 236px;
+            width: 472px;
+            height: 236px;
+            background-color: ghostwhite;
+            padding: 10px;
+            font-size: 20px;
+        }
+
+        #instructions span {
+            font-family: monospace;
+            font-size: 19.5px;
+        }
     </style>
 </html>
 <body>
@@ -84,6 +98,25 @@
             <span id="key"></span>
             <span id="state"></span>
         </div>
+    </div>
+    <div id="instructions">
+        <strong>Digital Top Hat</strong>
+        <br/>
+        <hr/>
+        <span>
+            <strong>0-9</strong>&nbsp;&nbsp;
+            Select media, press <strong>Enter</strong> to confirm
+            <br/><strong>/&nbsp;&nbsp;</strong>&nbsp;&nbsp;
+            Swap media sources
+            <br/><strong>*&nbsp;&nbsp;</strong>&nbsp;&nbsp;
+            Toggle fullscreen mode for screens
+            <br/><strong>.&nbsp;&nbsp;</strong>&nbsp;&nbsp;
+            Immediately disable stream
+        </span>
+        <hr/>
+        <span>
+            Source media must be of width 256/512/1024px and of height 256px. MP3 support available.
+        </span>
     </div>
     <script>
         const acceptedInputs = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0']
@@ -184,7 +217,7 @@
             }
             else if (event.key == "/") {
                 reset()
-                state.innerHTML = 'MEDIA SET<br>CHANGED'
+                state.innerHTML = 'MEDIA SET<br/>CHANGED'
                 if (mediaIndex == 2) {
                     mediaIndex = 1
                 }
@@ -196,7 +229,7 @@
             }
             else if (event.key == ".") {
                 reset()
-                state.innerHTML = 'STREAM<br>STOPPED'
+                state.innerHTML = 'STREAM<br/>STOPPED'
                 media.backgroundImage = ''
                 audio.pause()
             }
