Fixed display bug for video previews

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
             min-width: calc(256px/5);
             width: calc(256px/5);
             background-color: black;
+            position: relative;
         }
 
         .selections > div > span {
             background-color: black;
             color: white;
             padding: 0 5px;
+            position: absolute;
         }
 
         #status {
