--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 </html>
 <body>
     <div id="media">
-        <div id="quarter" class="media-wrap">
+        <!-- Template -->
+        <!--<div id="quarter" class="media-wrap">
             <div class="quarter"></div>
             <div class="quarter"></div>
             <div class="quarter"></div>
@@ -124,7 +125,7 @@
         </div>
         <div id="full" class="media-wrap">
             <div class="full"></div>
-        </div>
+        </div>-->
     </div>
     <div id="input">
         <div class="selections">
@@ -166,20 +167,17 @@
         </span>
     </div>
     <script>
-        var mediaIndex = 1
-        var mediaLibrary = mediaData[mediaIndex.toString()]
-
         const mediaData = {
             "1": [
-                {"id": "1", "file": "1.gif"},
-                {"id": "2", "file": "2.gif"},
-                {"id": "3", "file": "3.gif"},
-                {"id": "4", "file": "4.gif"},
-                {"id": "5", "file": "5.gif"},
-                {"id": "6", "file": "6.gif"},
-                {"id": "7", "file": "7.mp4", "width": 256},
-                {"id": "8", "file": "8.mp4", "width": 512},
-                {"id": "9", "file": "9.mp4", "width": 1024},
+                {"id": "1", "file": "1.gif", "type": "image"},
+                {"id": "2", "file": "2.gif", "type": "image"},
+                {"id": "3", "file": "3.gif", "type": "image"},
+                {"id": "4", "file": "4.gif", "type": "image"},
+                {"id": "5", "file": "5.gif", "type": "image"},
+                {"id": "6", "file": "6.gif", "type": "image"},
+                {"id": "7", "file": "7.mp4", "type": "video", "width": 256},
+                {"id": "8", "file": "8.mp4", "type": "video", "width": 512},
+                {"id": "9", "file": "9.mp4", "type": "video", "width": 1024},
                 {"id": "0", "file": ""}
             ],
             "2": [
@@ -196,71 +194,42 @@
             ]
         }
 
-        function emptyWrappers(wrapper) {
-            console.log(currentKey)
-            for (let i = 0; i < wrapper.length; i++) {
-                console.log("ORIGINAL:")
-                console.log(wrapper[i])
-            }
-        }
+        var mediaIndex = 1
+        var mediaLibrary = mediaData[mediaIndex.toString()]
+        var currentMediaType = null
+
+        var mediaDiv = document.getElementById('media')
 
         function resetMedia() {
-            media.style.backgroundImage = ''
-            emptyWrappers(document.querySelectorAll(".quarter"))
+            if (currentMediaType == "video") {
+                if (mediaDiv.children.length > 0) {
+                    console.log(mediaDiv.children)
+                }
+            }
+            else {
+                mediaDiv.style.backgroundImage = ''
+            }
             console.log("FINISHED RESET")
-            return 1
+            return 0
         }
 
         async function setMedia(key) {
             if (key == null) {
-                console.log("CANCEL")
+                const promise = await resetMedia();
             }
             else {
                 const promise = await resetMedia();
+                if (promise == 0) {
+                    var i = (key == 0 ? 9 : key - 1)
+                    var mediaElement = mediaLibrary[i]
+                    currentMediaType = mediaElement.type
+                    if (currentMediaType == "video") {
 
-                console.log("START MEDIA")
-
-                var i = key - 1
-                if (key == 0) {
-                    i = 9
-                }
-                var mediaElement = mediaLibrary[i]
-                if (mediaElement.file.includes(".mp4")) {
-                    var selectWrapper = null
-                    var videos = []
-                    var repeatAmount = 1024 / mediaElement.width
-
-                    if (repeatAmount == 4) {
-                        selectWrapper = 'quarter'
                     }
-                    else if (repeatAmount == 2) {
-                        selectWrapper = 'half'
+                    else {
+                        mediaDiv.style.backgroundImage = 'url("media/' + mediaElement.file + '?a=' + Math.random() + '")'
                     }
-                    else if (repeatAmount == 1) {
-                        selectWrapper = 'full'
-                    }
-                    
-                    for (let i = 0; i < repeatAmount; i++) {
-                        var wrapper = document.getElementById(selectWrapper)
-                        var mediaVideo = document.createElement("video")
-                        mediaVideo.src = 'media/' + mediaElement.file
-                        mediaVideo.autoplay = true
-                        if (i >= 0) {
-                            mediaVideo.muted = true
-                        }
-                        mediaVideo.width = mediaElement.width
-                        mediaVideo.height = 256
-                        mediaVideo.controls = false
-                        mediaVideo.loop = true
-                        wrapper.children[i].appendChild(mediaVideo)
-                        console.log("NEW:")
-                        console.log(wrapper.children[i])
-                    }
-                }
-                else {
-                    document.getElementById('media').style.backgroundImage = 'url("media/' + mediaElement.file + '?a=' + Math.random() + '")'
-                }
-                
+                }                
             }
         }
 
